--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body>
 
     <div class="container">
-        <div id="appJumbotron" class="row">
+        <div id="appJumbotron" class="row mt-3">
             <div class="col-sm-12">
                 <div class="jumbotron text-center">
                     <h1 class="display-4">Employee Data Management</h1>
@@ -80,7 +80,7 @@
             </div>
         </div>
 
-        <div id="addEmployee" class="row mt-5">
+        <div id="addEmployee" class="row mt-5 mb-5">
             <div class="col-sm-12">
                 <div class="card">
                     <div class="card-header text-white bg-primary">Add Employee</div>
